--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Oleksii Nekrasov
-description: Welcome to my personal information page
+title: Code Craft Labs
+# description: Welcome to my personal information page
