Update title in configuration file

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Code Craft Labs IT consulting
+title: IT consulting
 description: >-
   Specialized Technical Leadership & DevOps Engineering. 
   Helping organizations build secure, scalable, and cost-efficient cloud infrastructure.
